@@ -630,11 +630,11 @@ session::run_impl ()
 
 	  /* If a chroot mount location has not yet been set, and the
 	     chroot is not a plain chroot, set a mount location with the
-	     session id. */
+	     session id.  Only set for non-plain chroots which run
+	     setup scripts. */
 	  {
 	    chroot_plain *plain = dynamic_cast<chroot_plain *>(chroot.get());
-	    if (chroot->get_mount_location().empty() &&
-		(plain == 0 || plain->get_run_setup_scripts() == true))
+	    if (chroot->get_mount_location().empty() && plain == 0)
 	      {
 		std::string location(std::string(SCHROOT_MOUNT_DIR) + "/" +
 				     this->session_id);
